Added outline for bundle adjustment

--- a/camera_calib_visualization.ipynb
+++ b/camera_calib_visualization.ipynb
@@ -807,8 +807,29 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "https://demuc.de/tutorials/cvpr2017/sparse-modeling.pdf\n",
+        "\n",
+        "Note: need good enough poses to start with or this will just be bad b/c get stuck at local minima\n",
+        "\n",
+        "All 3D points X + camera poses P should be learnable parameters (with some limitations, see the planning doc)\n",
+        "\n",
+        "Reference my thesis/other pytorch code\n",
+        "\n",
+        "loss = MSE loss (the one in the reference is missing the square but it's equivalent b/c squaring doesn't do anything to the relative losses)\n",
+        "\n",
+        "optim + gradients + other stuff"
+      ],
+      "metadata": {
+        "id": "cSfNqJhYO_Ws"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# TBA may need to do in .py file and run here idk"
+      ],
       "metadata": {
         "id": "T8N3ErAgFcv5"
       },
