removed extra code

--- a/camera_calib_visualization.ipynb
+++ b/camera_calib_visualization.ipynb
@@ -588,150 +588,150 @@
       },
       "outputs": [],
       "source": [
-        "# @title FOR REFERENCE DO NOT RUN\n",
-        "# Visualize_Object_Points\n",
+        "# # @title FOR REFERENCE DO NOT RUN\n",
+        "# # Visualize_Object_Points\n",
         "\n",
-        "# simple 3d scatter plot of the reconstructed points.\n",
-        "# can color by z depth or by time (frame when the shadow edge hit).\n",
-        "# saves to html if you pass a path.\n",
+        "# # simple 3d scatter plot of the reconstructed points.\n",
+        "# # can color by z depth or by time (frame when the shadow edge hit).\n",
+        "# # saves to html if you pass a path.\n",
         "\n",
-        "def visualize_object_points(point_cloud,\n",
-        "                            color_by=None,\n",
-        "                            front_edge_times=None,\n",
-        "                            object_mask=None,\n",
-        "                            html_path=None,\n",
-        "                            marker_size=2):\n",
+        "# def visualize_object_points(point_cloud,\n",
+        "#                             color_by=None,\n",
+        "#                             front_edge_times=None,\n",
+        "#                             object_mask=None,\n",
+        "#                             html_path=None,\n",
+        "#                             marker_size=2):\n",
         "\n",
-        "    # process point cloud a bit\n",
-        "    pc = np.asarray(point_cloud, dtype=float)\n",
-        "    H, W, _ = pc.shape\n",
+        "#     # process point cloud a bit\n",
+        "#     pc = np.asarray(point_cloud, dtype=float)\n",
+        "#     H, W, _ = pc.shape\n",
         "\n",
-        "    valid = np.all(np.isfinite(pc), axis=2)\n",
-        "    if object_mask is not None:\n",
-        "        valid &= object_mask.astype(bool)\n",
+        "#     valid = np.all(np.isfinite(pc), axis=2)\n",
+        "#     if object_mask is not None:\n",
+        "#         valid &= object_mask.astype(bool)\n",
         "\n",
-        "    if not np.any(valid):\n",
-        "        print(\"no valid points to plot.\")\n",
-        "        return go.Figure()\n",
+        "#     if not np.any(valid):\n",
+        "#         print(\"no valid points to plot.\")\n",
+        "#         return go.Figure()\n",
         "\n",
-        "    # extract X, Y, Z values for each point\n",
-        "    X = pc[:, :, 0][valid]\n",
-        "    Y = pc[:, :, 1][valid]\n",
-        "    Z = pc[:, :, 2][valid]\n",
+        "#     # extract X, Y, Z values for each point\n",
+        "#     X = pc[:, :, 0][valid]\n",
+        "#     Y = pc[:, :, 1][valid]\n",
+        "#     Z = pc[:, :, 2][valid]\n",
         "\n",
-        "    # decide what to color by\n",
-        "    if color_by == 'time' and front_edge_times is not None:\n",
-        "        C = np.asarray(front_edge_times, float)[valid]\n",
-        "        colorscale = 'Turbo'\n",
-        "        marker = dict(size=marker_size,\n",
-        "                      color=C,\n",
-        "                      colorscale=colorscale,\n",
-        "                      showscale=True)\n",
-        "    elif color_by == 'z':\n",
-        "        C = Z\n",
-        "        colorscale = 'Viridis'\n",
-        "        marker = dict(size=marker_size,\n",
-        "                      color=C,\n",
-        "                      colorscale=colorscale,\n",
-        "                      showscale=True)\n",
-        "    else:\n",
-        "      marker=dict(size=2,\n",
-        "                  opacity = 0.8)\n",
+        "#     # decide what to color by\n",
+        "#     if color_by == 'time' and front_edge_times is not None:\n",
+        "#         C = np.asarray(front_edge_times, float)[valid]\n",
+        "#         colorscale = 'Turbo'\n",
+        "#         marker = dict(size=marker_size,\n",
+        "#                       color=C,\n",
+        "#                       colorscale=colorscale,\n",
+        "#                       showscale=True)\n",
+        "#     elif color_by == 'z':\n",
+        "#         C = Z\n",
+        "#         colorscale = 'Viridis'\n",
+        "#         marker = dict(size=marker_size,\n",
+        "#                       color=C,\n",
+        "#                       colorscale=colorscale,\n",
+        "#                       showscale=True)\n",
+        "#     else:\n",
+        "#       marker=dict(size=2,\n",
+        "#                   opacity = 0.8)\n",
         "\n",
         "\n",
-        "    fig = go.Figure(\n",
-        "        data=[\n",
-        "            go.Scatter3d(\n",
-        "                x=X, y=Y, z=Z,\n",
-        "                mode='markers',\n",
-        "                marker=marker\n",
-        "            )\n",
-        "        ]\n",
-        "    )\n",
+        "#     fig = go.Figure(\n",
+        "#         data=[\n",
+        "#             go.Scatter3d(\n",
+        "#                 x=X, y=Y, z=Z,\n",
+        "#                 mode='markers',\n",
+        "#                 marker=marker\n",
+        "#             )\n",
+        "#         ]\n",
+        "#     )\n",
         "\n",
-        "    fig.update_layout(\n",
-        "        scene=dict(\n",
-        "            aspectmode='data',\n",
-        "            xaxis=dict(title='x'),\n",
-        "            yaxis=dict(title='y'),\n",
-        "            zaxis=dict(title='z')\n",
-        "        ),\n",
-        "        margin=dict(l=0, r=0, t=30, b=0),\n",
-        "        title=f'point cloud (colored by {color_by})',\n",
-        "        scene_camera=dict(\n",
-        "            up=dict(x=0, y=-1, z=0),\n",
-        "            center=dict(x=0, y=0, z=0),\n",
-        "            eye=dict(x=0, y=0, z=-2)\n",
-        "        )\n",
-        "    )\n",
+        "#     fig.update_layout(\n",
+        "#         scene=dict(\n",
+        "#             aspectmode='data',\n",
+        "#             xaxis=dict(title='x'),\n",
+        "#             yaxis=dict(title='y'),\n",
+        "#             zaxis=dict(title='z')\n",
+        "#         ),\n",
+        "#         margin=dict(l=0, r=0, t=30, b=0),\n",
+        "#         title=f'point cloud (colored by {color_by})',\n",
+        "#         scene_camera=dict(\n",
+        "#             up=dict(x=0, y=-1, z=0),\n",
+        "#             center=dict(x=0, y=0, z=0),\n",
+        "#             eye=dict(x=0, y=0, z=-2)\n",
+        "#         )\n",
+        "#     )\n",
         "\n",
-        "    if html_path:\n",
-        "        pio.write_html(fig, html_path, include_plotlyjs='cdn', auto_open=False)\n",
-        "        print(f'saved {html_path}')\n",
+        "#     if html_path:\n",
+        "#         pio.write_html(fig, html_path, include_plotlyjs='cdn', auto_open=False)\n",
+        "#         print(f'saved {html_path}')\n",
         "\n",
-        "    return fig\n",
+        "#     return fig\n",
         "\n",
-        "'''\n",
-        "fig = visualize_object_points(pc,\n",
-        "                              object_mask=mask,\n",
-        "                              html_path='point_cloud_raw.html',\n",
-        "                              marker_size=2)\n",
-        "fig.show()\n",
-        "'''\n",
+        "# '''\n",
+        "# fig = visualize_object_points(pc,\n",
+        "#                               object_mask=mask,\n",
+        "#                               html_path='point_cloud_raw.html',\n",
+        "#                               marker_size=2)\n",
+        "# fig.show()\n",
+        "# '''\n",
         "\n",
-        "#@title Plot shadow planes for verification\n",
-        "fig = go.Figure()\n",
+        "# #@title Plot shadow planes for verification\n",
+        "# fig = go.Figure()\n",
         "\n",
-        "# camera\n",
-        "h_img, w_img = img.shape\n",
-        "P = np.hstack((calMatrix, np.zeros((3,1))))\n",
-        "add_plotly_camera(h_img, w_img, P, 1, fig)\n",
+        "# # camera\n",
+        "# h_img, w_img = img.shape\n",
+        "# P = np.hstack((calMatrix, np.zeros((3,1))))\n",
+        "# add_plotly_camera(h_img, w_img, P, 1, fig)\n",
         "\n",
-        "# AprilBoard planes\n",
-        "add_plotly_plane(plane_h, fig, 'greens')\n",
-        "add_plotly_plane(plane_v, fig)\n",
+        "# # AprilBoard planes\n",
+        "# add_plotly_plane(plane_h, fig, 'greens')\n",
+        "# add_plotly_plane(plane_v, fig)\n",
         "\n",
-        "# a few shadow planes (limit for clarity)\n",
-        "num_printed = 0\n",
-        "for i, plane in enumerate(shadow_planes[::10]): # Access the every 10th element of the list of shadow planes returned by compute_shadow_planes\n",
-        "    if plane is not None:\n",
-        "        num_printed += 1\n",
-        "        add_plotly_plane(plane, fig,'reds')\n",
-        "    if num_printed >= 10:\n",
-        "        break\n",
+        "# # a few shadow planes (limit for clarity)\n",
+        "# num_printed = 0\n",
+        "# for i, plane in enumerate(shadow_planes[::10]): # Access the every 10th element of the list of shadow planes returned by compute_shadow_planes\n",
+        "#     if plane is not None:\n",
+        "#         num_printed += 1\n",
+        "#         add_plotly_plane(plane, fig,'reds')\n",
+        "#     if num_printed >= 10:\n",
+        "#         break\n",
         "\n",
-        "# fitted 3D lines\n",
-        "num_printed = 0\n",
-        "for i, line in enumerate(line_data[::10]): # Access every 10th element of the list of lines returned by compute_shadow_planes\n",
-        "    if line is None:\n",
-        "        continue\n",
-        "    num_printed += 1\n",
-        "    p1_h, p2_h, p1_v, p2_v = line\n",
-        "    # horizontal line (blue)\n",
-        "    fig.add_trace(go.Scatter3d(\n",
-        "        x=[p1_h[0], p2_h[0]], y=[p1_h[1], p2_h[1]], z=[p1_h[2], p2_h[2]],\n",
-        "        mode='lines', line=dict(color='#2ca02c', width=6), name=f'H line {i}'\n",
-        "    ))\n",
-        "    # vertical line (green)\n",
-        "    fig.add_trace(go.Scatter3d(\n",
-        "        x=[p1_v[0], p2_v[0]], y=[p1_v[1], p2_v[1]], z=[p1_v[2], p2_v[2]],\n",
-        "        mode='lines', line=dict(color='#1f77b4', width=6), name=f'V line {i}'\n",
-        "    ))\n",
-        "    if num_printed >= 10:\n",
-        "        break\n",
+        "# # fitted 3D lines\n",
+        "# num_printed = 0\n",
+        "# for i, line in enumerate(line_data[::10]): # Access every 10th element of the list of lines returned by compute_shadow_planes\n",
+        "#     if line is None:\n",
+        "#         continue\n",
+        "#     num_printed += 1\n",
+        "#     p1_h, p2_h, p1_v, p2_v = line\n",
+        "#     # horizontal line (blue)\n",
+        "#     fig.add_trace(go.Scatter3d(\n",
+        "#         x=[p1_h[0], p2_h[0]], y=[p1_h[1], p2_h[1]], z=[p1_h[2], p2_h[2]],\n",
+        "#         mode='lines', line=dict(color='#2ca02c', width=6), name=f'H line {i}'\n",
+        "#     ))\n",
+        "#     # vertical line (green)\n",
+        "#     fig.add_trace(go.Scatter3d(\n",
+        "#         x=[p1_v[0], p2_v[0]], y=[p1_v[1], p2_v[1]], z=[p1_v[2], p2_v[2]],\n",
+        "#         mode='lines', line=dict(color='#1f77b4', width=6), name=f'V line {i}'\n",
+        "#     ))\n",
+        "#     if num_printed >= 10:\n",
+        "#         break\n",
         "\n",
-        "# finalize figure\n",
-        "fig.update_layout(\n",
-        "    scene_aspectmode='manual',\n",
-        "    scene_aspectratio=dict(x=1, y=2, z=3),\n",
-        "    showlegend=False,\n",
-        "    scene_camera=dict(\n",
-        "        up=dict(x=0, y=-1, z=0),\n",
-        "        center=dict(x=0, y=0, z=0),\n",
-        "        eye=dict(x=-1, y=-1, z=-5)\n",
-        "    )\n",
-        ")\n",
-        "fig.show()"
+        "# # finalize figure\n",
+        "# fig.update_layout(\n",
+        "#     scene_aspectmode='manual',\n",
+        "#     scene_aspectratio=dict(x=1, y=2, z=3),\n",
+        "#     showlegend=False,\n",
+        "#     scene_camera=dict(\n",
+        "#         up=dict(x=0, y=-1, z=0),\n",
+        "#         center=dict(x=0, y=0, z=0),\n",
+        "#         eye=dict(x=-1, y=-1, z=-5)\n",
+        "#     )\n",
+        "# )\n",
+        "# fig.show()"
       ]
     },
     {
