Fix some issues

--- a/camera_calib_visualization.ipynb
+++ b/camera_calib_visualization.ipynb
@@ -747,6 +747,9 @@
       },
       "outputs": [],
       "source": [
+        "import numpy as np\n",
+        "import plotly.graph_objects as go\n",
+        "\n",
         "def visualize_scene_points(scene_points, camera_poses, img_h, img_w):\n",
         "  # Add points to figure as a scatterplot\n",
         "  # Clean points slightly\n",
@@ -777,7 +780,7 @@
         "  for i, (R, t) in enumerate(camera_poses):\n",
         "      # compute camera matrix from rotation and translation\n",
         "      P = np.hstack((R, t))\n",
-        "      add_plotly_camera(img_h, img_w, P, i, fig)\n",
+        "      add_plotly_camera(img_h, img_w, P, 2.0, fig)\n",
         "\n",
         "  fig.update_layout(\n",
         "      scene=dict(\n",
@@ -787,7 +790,7 @@
         "          zaxis=dict(title='z')\n",
         "      ),\n",
         "      margin=dict(l=0, r=0, t=30, b=0),\n",
-        "      title=f'point cloud (colored by {color_by})',\n",
+        "      title=f'point cloud',\n",
         "      scene_camera=dict(\n",
         "          up=dict(x=0, y=-1, z=0),\n",
         "          center=dict(x=0, y=0, z=0),\n",
